--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
     <title>.: GEMS :.</title>
     <link rel="stylesheet" href="./css/index.min.css" />
     <script src="https://unpkg.com/d3@7.2.0/dist/d3.min.js" defer></script>
-    <script src="./js/index.js" defer></script>
+    <script src="./js/index.js" type="module" defer></script>
   </head>
   <body>
     <div class="container">
